# soulana-backend

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/2024-12-07-100800_create_projects/: down.sql  up.sql
migrations/2024-12-07-101520_create_users/: up.sql
migrations/2024-12-07-102520_insert_initial_projects/: down.sql  up.sql
migrations/2024-12-08-111044_create_identity_tables/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/routes/: auth.rs  mod.rs
src/routes/blink_chain/: handlers.rs  mod.rs  models.rs
src/routes/health/: mod.rs
src/routes/users/: handlers.rs  mod.rs  models.rs
src/services/: auth.rs
src/zk/: mock.rs  mod.rs  real.rs
