[package]
name = "soulana-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros"] }
dotenv = "0.15.0"
env_logger = "0.11.2"
chrono = { version = "0.4.35", features = ["serde"] }
