[package]
name = "soulana-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.11.2"
chrono = { version = "0.4", features = ["serde"] }
solana-sdk = "1.17.0"
solana-client = "1.17.0"
solana-program = "1.17.0"
r2d2 = "0.8.10"
thiserror = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
bs58 = "0.5.0"
web3 = "0.19.0"
jsonwebtoken = "8.1.1"
base64 = "0.21.7"
ark-groth16 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = { version = "0.4.0", features = ["derive"] }
ark-snark = "0.4.0"
rand = "0.8.5"
sha3 = "0.10.8"
bincode = "1.3.3"
hex = "0.4.3"
num-bigint = "0.4.4"
